lesson3/css/medium.css
@media only screen and (min-width: 32.5em) {
    nav ul{
        grid-template-columns: repeat(4, 1fr);
        grid-template-rows: 1fr;
        padding: .75em;
    }

    .home-main{
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-rows: .5fr 1fr .5fr;
        text-align: left;
        margin-bottom: 1em;
    }

    .home-main h2{
        grid-column: 2/4;
        padding-bottom: .3em;
    }

    .home-main img{
        grid-column: 1/2;
        grid-row: 1/4;
        align-self: center;
        padding: 0 .5em 2em .5em;
    }

    .home-main p{
        grid-column: 2/4;
        padding: .5em 1.25rem;
    }

    .home-main h3{
        grid-column: 2/4;
        grid-row: 3/4;
    }

    #colors-sample p{
        width: 50%;
    }

    .typography{
        padding-left: 100px;
    }
}

